# partwm

./: .gitignore  Cargo.toml  Makefile  README.md  nirgendwm.toml  nowm.toml  runner.sh  rustfmt.toml  xinitrc
src/: client_logic.rs  clients.rs  clients2.rs  lib.rs  main.rs  state.rs  util.rs  wm.rs  xlib.rs
src/backends/: keycodes.rs  mod.rs  traits.rs  window_event.rs  xcb.rs  xlib.rs  xlib.rs.old
src/backends/xlib/: color.rs  keysym.rs  mod.rs
