[package]
name = "wm"
version = "0.2.0"
authors = ["noonebtw <noonebtw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11 = {version = "2.18.2", features = ["xlib"] }
x11rb = "0.8.1"
num-derive = "0.3.3"
num-traits = "0.2.14"
log = "0.4.13"
simple_logger = "1.11.0"
dirs = "3.0.2"
log4rs = "1.0.0"
indexmap = "1.6.2"