[package]
name = "wm"
version = "0.3.0"
authors = ["noonebtw <noonebtw@gmail.com>"]
edition = "2018"

[[bin]]
name = "nirgendwm"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11 = {version = "2.19", features = ["xlib", "xft"] }
log = "0.4"
simple_logger = "2.0"
dirs = "3.0.0"
log4rs = "1.0"
indexmap = "1.0"
thiserror = "1.0"
bitflags = "1.3"
derivative = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
num-traits = "0.2"
strum = {version = "0.24.0", features = ["derive"]}
bytemuck = "1.0"
